syntax = "proto3";
 
option java_package ="io.grpc.examples";
 
package regi_and_log;

service Greeter {
    rpc RegisteredUser (RegisteredUserRequest) returns (RegisteredUserReply) {}
    rpc LoginUser(LoginUserRequest) returns (LoginUserReply) {}
}


message RegisteredUserRequest {
    string num=1;
    string password=2;
}


message RegisteredUserReply {
    bool message=1;
    string result=2;
}


message LoginUserRequest {
    string num=1;
    string password=2;
}


message LoginUserReply {
    bool message=1;
    string result=2;
}


